Added images, edited some html and css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Big Picture</h1>
+				<h1>Dylan Connors</h1>
 				<nav>
 					<ul>
 						<li><a href="#intro">Intro</a></li>
@@ -32,10 +32,9 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Hey.</h2>
+						<h2>Hello!</h2>
 					</header>
-					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed by <a href="https://html5up.net">HTML5 UP</a><br />
-					and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
+					<p>My name is <strong>Dylan Connors</strong> and this is the place to learn everything about me and what I do! 
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -46,11 +45,13 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>What I Do</h2>
+						<h2>Who I <em>Am</em></h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>I am a third year at Miami University in Oxford, OH majoring in English Literature and minoring in French studies.</p>
+					<p>In my free time, I love reading and writing. I hope someday to publish my work and help others in publishing theirs!</p>
+					<p> If you're interested in learning more about me and my skills, feel free to check out my <a href="Dylan Connors Resume.pdf"> <em>RESUME</em></a>!
+				
+
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
@@ -59,7 +60,7 @@
 			<section id="two" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Who I Am</h2>
+						<h2>What I Am <em>Passionate</em> About</h2>
 					</header>
 					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
 					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
@@ -73,15 +74,13 @@
 				<div class="content">
 					<header>
 						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<p>Here you can find various pieces of my creative and academic writing! My work ranges from fiction to novel/ story analysis and some of it includes carful reflections of French novels. </p>
 					</header>
 
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a>
+								<a href="Final Essay Final Draft-Dylan Connors (1).pdf" class="image fit"><img src="images/english-academia.jpeg" title="The Anonymous Red" alt="" /></a>
 							</article>
 							<article class="from-right">
 								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
@@ -107,8 +106,9 @@
 			<section id="contact" class="main style3 secondary">
 				<div class="content">
 					<header>
-						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+						<h2>Say Hello!</h2>
+						<p>Buisness Inquires? Questions? Ideas? Nerdy lore you want to share? Send me a message!</p>
+						<p>If you want to stay up to date with me, check out my socials below!</p>
 					</header>
 					<div class="box">
 						<form method="post" action="#">
@@ -130,7 +130,7 @@
 
 				<!-- Icons -->
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://twitter.com/i/flow/login" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
@@ -140,7 +140,7 @@
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+						<li>&copy; DylanConnors</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</footer>
