--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 				<nav>
 					<ul>
 						<li><a href="#intro">Intro</a></li>
-						<li><a href="#one">What I Do</a></li>
-						<li><a href="#two">Who I Am</a></li>
+						<li><a href="#one">About Me</a></li>
+						<li><a href="#two">My Interests</a></li>
 						<li><a href="#work">My Work</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
@@ -45,14 +45,15 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Who I <em>Am</em></h2>
+						<h2>About <em>Me</em></h2>
 					</header>
 					<p>I am a third year at Miami University in Oxford, OH majoring in English Literature and minoring in French studies.</p>
 					<p>In my free time, I love reading and writing. I hope someday to publish my work and help others in publishing theirs!</p>
-					<p> If you're interested in learning more about me and my skills, feel free to check out my <a href="Dylan Connors Resume.pdf"> <em>RESUME</em></a>!
-				
-
+					<p> If you're interested in learning more about me and my skills, feel free to check out my <a href="Dylan Connors Resume.pdf"> <em>RESUME</em></a>!</p>
 				</div>
+
+			<img src="images/IMG-8191.jpg" class="photo-of-myself" alt="Photo of myself">
+
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
 
@@ -60,7 +61,7 @@
 			<section id="two" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>What I Am <em>Passionate</em> About</h2>
+						<h2>My Interests</h2>
 					</header>
 					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
 					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
@@ -74,7 +75,7 @@
 				<div class="content">
 					<header>
 						<h2>My Work</h2>
-						<p>Here you can find various pieces of my creative and academic writing! My work ranges from fiction to novel/ story analysis and some of it includes carful reflections of French novels. </p>
+						<p>Here you can find various pieces of my creative and academic writing! My work ranges from fiction to novel/ story analysis and some of it includes careful reflections of French novels. </p>
 					</header>
 
 					<!-- Gallery  -->
@@ -83,7 +84,7 @@
 								<a href="Final Essay Final Draft-Dylan Connors (1).pdf" class="image fit"><img src="images/english-academia.jpeg" title="The Anonymous Red" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
+								<a href="Paper #1 Final Draft-Dylan Connors  (1).pdf" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
 							</article>
 							<article class="from-left">
 								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
