Finalized website. Adding links, images, and more details.

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Hello!</h2>
+						<h2 class="mainheader">Hello!</h2>
 					</header>
-					<p>My name is <strong>Dylan Connors</strong> and this is the place to learn everything about me and what I do! 
+					<p class="myintro">My name is <strong>Dylan Connors</strong> and this is the place to learn everything about me and what I do! 
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -63,40 +63,41 @@
 					<header>
 						<h2>My Interests</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>My greatest loves are all things nerdy! Mostly books such as Harry Potter, Percy Jackson, ACOTAR, etc (You can check out my Goodreads linked at the bottom!) I love exploring other worlds ans cultures both in fantasy and reality.</p>
 				</div>
+
+				<img src="images/reading.jpg" class="fallreading" alt="open book with candles surrounding it">
+
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
 
 		<!-- Work -->
-			<section id="work" class="main style3 primary">
-				<div class="content">
+			<section id="work" class="main style3primary">
+				<div class="contentwork">
 					<header>
-						<h2>My Work</h2>
-						<p>Here you can find various pieces of my creative and academic writing! My work ranges from fiction to novel/ story analysis and some of it includes careful reflections of French novels. </p>
+						<h2 class="mywork">My Work</h2>
+						<p class="description">Here you can find various pieces of my creative and academic writing! My work ranges from fiction to novel/ story analysis and some of it includes careful reflections of French novels. </p>
 					</header>
 
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="Final Essay Final Draft-Dylan Connors (1).pdf" class="image fit"><img src="images/english-academia.jpeg" title="The Anonymous Red" alt="" /></a>
+								<a href="Final Essay Final Draft-Dylan Connors (1).pdf" class="image fit"><img src="images/fallofhouseofusher.jpg" title="The Anonymous Red" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="Paper #1 Final Draft-Dylan Connors  (1).pdf" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
+								<a href="Paper #1 Final Draft-Dylan Connors  (1).pdf" class="image fit"><img src="images/womenofbeowulf.jpg" title="Airchitecture II" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
+								<a href="Cyrano Paper-Dylan Connors (1).pdf" class="image fit"><img src="images/cyrano.jpg" title="Air Lounge" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a>
+								<a href="ECT Paper Final Draft-Dylan Connors (1).pdf" class="image fit"><img src="images/ensemblec'esttout.jpg" title="Carry on" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a>
+								<a href="Major Paper 2 Revision-Dylan Connors.pdf" class="image fit"><img src="images/thewitch.jpg" title="The sparkling shell" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Bent IX" alt="" /></a>
+								<a href="Final Portfolio Dylan Connors (1).pdf" class="image fit"><img src="images/writingportfolio.jpg" title="Bent IX" alt="" /></a>
 							</article>
 						</div>
 
@@ -106,7 +107,7 @@
 		<!-- Contact -->
 			<section id="contact" class="main style3 secondary">
 				<div class="content">
-					<header>
+					<header class="contact">
 						<h2>Say Hello!</h2>
 						<p>Buisness Inquires? Questions? Ideas? Nerdy lore you want to share? Send me a message!</p>
 						<p>If you want to stay up to date with me, check out my socials below!</p>
@@ -131,12 +132,12 @@
 
 				<!-- Icons -->
 					<ul class="icons">
-						<li><a href="https://twitter.com/i/flow/login" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
+						<li><a href="https://twitter.com/home" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.facebook.com/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/dillipotato/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="www.linkedin.com/in/dylan-connors-308515256" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.goodreads.com/" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="https://www.pinterest.com/ddconnors2003/" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
 					</ul>
 
 				<!-- Menu -->
