--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- Header -->
 			<header id="header">
 				<h1>Dylan Connors</h1>
-				<nav>
+				<nav class="navigation">
 					<ul>
 						<li><a href="#intro">Intro</a></li>
 						<li><a href="#one">About Me</a></li>
